<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    tools:context=".MainActivity3">


    <TextView
        android:id="@+id/textView"
        android:layout_width="235dp"
        android:layout_height="68dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="77dp"

        android:text="@string/eventelegance"
        android:textAlignment="center"
        android:textColor="#6A201B"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="334dp"
        android:layout_height="86dp"


        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="85dp"
        android:text="@string/choose_a_service"
        android:textAlignment="center"
        android:textColor="#D2635B"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"


        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="79dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">


        <RadioButton
            android:id="@+id/wedding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkButton"
            android:text="@string/wedding"
            android:textSize="23sp" />

        <RadioButton
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/birthday_celebration"
            android:textSize="23sp" />

        <RadioButton
            android:id="@+id/function"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/service_images"
            android:textSize="23sp" />

        <RadioButton
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/service_cost_calculation"
            android:textSize="23sp" />
    </RadioGroup>

    <Button
        android:id="@+id/button3"
        android:layout_width="124dp"
        android:layout_height="54dp"
        android:layout_marginBottom="72dp"
        android:background="#D05656"
        android:text="Next"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>