<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Birthday">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="127dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="68dp"
        android:text="@string/birthday"
        android:textAlignment="center"
        android:textColor="#D2635B"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="72dp"
        android:text="@string/choose_type_of_birthday"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="303dp"
        android:layout_height="0dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="108dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">


        <RadioButton
            android:id="@+id/child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/children_s_birthday_party"
            android:textSize="18sp"
            android:checked="true"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/teenager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teenager_s_birthday_party"
            android:textSize="18sp"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/adult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adult_birthday_party"
            android:textSize="18sp"
            android:onClick="checkButton"/>
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="114dp"
        android:background="#84C67C"
        android:text="next"
        android:textColor="@color/black"


        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

</androidx.constraintlayout.widget.ConstraintLayout>