<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    tools:context=".ServiceCostCalculation">

    <TextView
        android:id="@+id/textView"
        android:layout_width="235dp"
        android:layout_height="0dp"

        android:layout_marginTop="64dp"
        android:layout_marginBottom="51dp"
        android:text="@string/eventelegance"
        android:textAlignment="center"
        android:textColor="#6A201B"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/cost_calculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cost_calculation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="64dp"
        android:text="Service Cost Calculation"
        android:textAlignment="center"
        android:textColor="#D2635B"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="374dp"
        android:layout_height="144dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:checked="true"

        android:layout_marginBottom="101dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cost_calculation">

        <RadioButton
            android:id="@+id/wedding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkButton"
            android:text="@string/wedding"
            android:textSize="23sp" />

        <RadioButton
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/birthday_celebration"
            android:textSize="23sp" />

        <RadioButton
            android:id="@+id/anniversary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="Wedding Anniversary"
            android:textSize="23sp" />

        <RadioButton
            android:id="@+id/concert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="Concert"
            android:textSize="23sp" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="47dp"
        android:layout_marginBottom="100dp"
        android:background="#D05656"
        android:text="NEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>